refactoring css for feature slider tryout to fix design issues on safari

--- a/wp-content/themes/jj-kommunikation/jj-kommunikation/style.css
+++ b/wp-content/themes/jj-kommunikation/jj-kommunikation/style.css
@@ -2929,7 +2929,133 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
         }
      }
 
+     #top-features-section::-webkit-scrollbar {
+        display: none;
+     }
+
     .feature-card-menu {
+        position: relative;
+    }
+
+    .feature-card-menu .widget .widget-title {
+        font-size: 32px;
+    }
+
+    .feature-card-menu .widget .menu-engiicore-feature-slider-menu-container {
+        height: 400px;
+        min-height: 400px;
+    }
+
+    .feature-card-menu .widget .menu-engiicore-feature-slider-menu-container.swiper {
+        overflow: unset !important;
+    }
+
+    .feature-card-menu .widget .menu-engiicore-feature-slider-menu-container #menu-engiicore-feature-slider-menu {
+        display: flex;
+        gap: 50px;
+        padding: 20px 0;
+        height: inherit;
+        transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94) !important; 
+        transition-duration: 1s !important;
+    }
+
+    .feature-card-menu .widget .menu-engiicore-feature-slider-menu-container #menu-engiicore-feature-slider-menu .swiper-slide:not(.active) {
+        height: 300px;
+        opacity: 0.5;
+        transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94) !important;
+        transition-duration: 0.5s !important;
+    }
+
+    .feature-card-menu .widget .menu-engiicore-feature-slider-menu-container #menu-engiicore-feature-slider-menu .swiper-slide.active {
+        height: 300px;
+        opacity: 1;
+        transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94) !important;
+        transition-duration: 0.5s !important;
+    }
+
+    .feature-card-menu .widget .menu-engiicore-feature-slider-menu-container #menu-engiicore-feature-slider-menu .engiicore-feature-card {
+        height: inherit;
+        min-height: inherit;
+        position: relative;
+        height: 300px;
+        min-height: 300px;
+        /* width: 402px !important */;
+    }
+
+    .feature-card-menu .widget .menu-engiicore-feature-slider-menu-container #menu-engiicore-feature-slider-menu .engiicore-feature-card a {
+        height: inherit;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        padding: 125px 24px 0px 24px;
+        border-radius: 20px;
+        background: #fff;
+        box-shadow: 0px 25px 15px -5px rgba(0, 0, 0, 0.15);
+        transition: 300ms ease-in-out;
+        min-height: inherit;
+        font-size: 20px;
+        font-weight: bold;
+        /* width: 402px !important; */
+    }
+
+    .feature-card-menu .widget .menu-engiicore-feature-slider-menu-container #menu-engiicore-feature-slider-menu .engiicore-feature-card a:hover {
+        color: var(--secondayr-color) !important;
+        background-color:var(--light-blue-color);
+        
+    }
+    
+    .feature-card-menu .widget .menu-engiicore-feature-slider-menu-container #menu-engiicore-feature-slider-menu .engiicore-feature-card a .sub-label {
+        position: relative;
+        font-size: 1rem;
+        margin-top: 15px;
+        width: 100%;
+    }
+    
+    .feature-card-menu .widget .menu-engiicore-feature-slider-menu-container #menu-engiicore-feature-slider-menu .engiicore-feature-card a:hover .sub-label {
+        color: var(--secondary-color);
+    }
+
+    .feature-card-menu .widget .menu-engiicore-feature-slider-menu-container #menu-engiicore-feature-slider-menu .engiicore-feature-card a img {
+        position: absolute;
+        top: 50px;
+        left: 10px;
+        height: 55px;
+        width: 68px;
+    }
+
+    .feature-card-menu .swiper-button-prev, 
+    .feature-card-menu .swiper-button-next {
+        top: -30px !important;
+        right: 0 !important;
+        left: unset !important;
+        height: 50px;
+        width: 50px;
+    }
+
+    .feature-card-menu .swiper-button-next:after,
+    .feature-card-menu .swiper-button-prev:after {
+        content: "" !important;
+    }
+
+    .feature-card-menu .swiper-button-next:before {
+        content: "" !important;
+        background-image: url(/wp-content/uploads/slide_next.png);
+        height: 36px;
+        width: 36px;
+    }
+
+    .feature-card-menu .swiper-button-prev {
+        right: 45px !important;
+    }
+
+    .feature-card-menu .swiper-button-prev:before {
+        content: "";
+        background-image: url(/wp-content/uploads/slide_previous.png);
+        height: 36px;
+        width: 36px;
+    }
+
+    /* .feature-card-menu {
         position: relative;
 
         .widget {
@@ -2975,7 +3101,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
                         height: inherit;
                         min-height: inherit;
                         position: relative;
-                        /* width: 402px !important; */
+                        /* width: 402px !important; 
                         height: 300px !important;
 
                         a {
@@ -2991,7 +3117,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
                             min-height: inherit;
                             font-size: 20px;
                             font-weight: bold;
-                            /* width: 402px !important; */
+                            /* width: 402px !important;
 
                             &:hover {
                                 color: var(--secondayr-color) !important;
@@ -3051,7 +3177,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
                 }
             }
         }
-    }
+    } */
 
     @media (min-width: 320px) and (max-width: 639px) {
         .feature-card-menu .widget .menu-engiicore-feature-slider-menu-container #menu-engiicore-feature-slider-menu .engiicore-feature-card.active {
